# zk-abe-backend

./: .gitignore  Cargo.toml  README.md  policy_template.json
host/: Cargo.toml
host/src/: lib.rs  main.rs
methods/: README.md
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
relay/: Cargo.toml
relay/src/: lib.rs
relay/src/api/: mod.rs  submit_policy.rs
relay/src/merkles/: host_input.rs
relay/src/policy/: mod.rs  submit_policy.rs  test_policy.rs
relay/src/types/: models.rs
relay/src/utils/: merkle_tree.rs
relay/src/zkvm/: host_input.rs  mod.rs
server/: Cargo.toml
server/src/: main.rs
src/: main.rs  models.rs  submit_policy.rs  test_policy.rs
template_data/: do_1_data.json  do_multi_data.json  dp_1_data.json  dp_multi_data.json
